--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <title>Gamedev Canvas Workshop</title>
-  <link rel="stylesheet" href="http://localhost:8000/semantic.min.css">
+  <link rel="stylesheet" href="https://rh61704.github.io/dual-ball-game/semantic.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-  <script  src="http://localhost:8000/semantic.min.js"></script>
+  <script  src="https://rh61704.github.io/dual-ball-game/semantic.min.js"></script>
 </head>
  <style>
     	* { padding: 0; margin: 0; }
